--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>primeira página</title> 
- <link rel="stylesheet" href="style.css">
+    <title>ALURAFLIX</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>alô-mundo... cheguei</h1> 
-</body>
+    <header>ALURAFLIX</header>
+
+    <section>
+        <div>
+            <h1>Através do aranha verso supero o primeiro filme?</h1>
+            <P>#homem-aranha</P>
+        </div>
+        
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=ckWEW4ckKZ7gKA49" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+
+    </body>
 </html>
