--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>ALURAFLIX</header>
 
     <section>
-        <div>
+        <div   class="chamada-texto">
             <h1>Através do aranha verso supero o primeiro filme?</h1>
             <P>#homem-aranha</P>
         </div>
