--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="">el="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>ALURAFLIX</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>ALURAFLIX</header>
+    <header>JOAOFLIX</header>
 
     <section class="chamada">
         <div class="chamada-texto">
@@ -29,27 +29,27 @@
     </section>
     <section class="categorias">
         <h2>Filmes e series</h2>
-    <div class="categoria-videos">
-        <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
-            <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
-        </a>
-        <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-            <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
-        </a>
-        <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-            <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
-        </a>
-        <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-            <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
-        </a>
-        <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-            <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
-        </a>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
+                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
+                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
+                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
+                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
+                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+            </a>
 
-    </div>
-        
+        </div>
 
-    
+
+
     </section>
 
 </body>
